--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         function onVrViewLoad() {
         // Selector '#vrview' finds element with id 'vrview'.
             var vrView = new VRView.Player('#vrview', {
-                image: 'asset/panovr_0.jpg',
+                image: 'http://someday.run/googlevr/asset/panovr_0.jpg',
                 is_stereo: false
             });
         }
